# IdleZPGBot

./: .git-blame-ignore-revs  .gitignore  .markdownlint-cli2.yaml  README.md  idlezpgbot.py  pyproject.toml
src/: bot.py  config.py  database.py  logging_config.py  main.py  utils.py
