[project]
name = "idlezpgbot"
version = "0.0.3"
description = "The #IdleZPG Bot"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [{ name = "txtsd", email = "code@ihavea.quest" }]
keywords = ["irc", "bot", "idlerpg", "zpg"]
requires-python = ">=3.12"
dependencies = [
 "aiosqlite>=0.20.0",
 "argon2-cffi>=23.1.0",
 "toml>=0.10.2",
]

[project.urls]
homepage = "https://github.com/txtsd/IdleZPGBot"
repository = "https://github.com/txtsd/IdleZPGBot"
issues = "https://github.com/txtsd/IdleZPGBot/issues"

[project.scripts]
idlezpgbot = "src.main:main"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
